--- a/1-10.css
+++ b/1-10.css
@@ -55,3 +55,16 @@ footer{
   background-color:#aaaaaa;
   height:50px;
 }
+@media screen and (max-width:768px){
+  main{
+    display:block;
+    width:100%;
+  }
+  .box{
+    width:90%;
+    margin:0px auto 20px;
+  }
+  .box:last-child{
+    margin:0px auto;
+  }
+}
